holyc-parser/tests/corpus/passing/178-errors-err-throw-outside-try.hc
I64 e_throw_no_try = 1;
