holyc-parser/tests/corpus/failing/013-errors-err-undecl-ident.hc
I64 eud = some_undecl_ident_xx;
